--- a/demos/msa-agile-integration.adoc
+++ b/demos/msa-agile-integration.adoc
@@ -4,7 +4,7 @@
 |======
 *Length*,TBD
 *Difficulty*,Medium
-*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5
+*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5[Google Slide]
 *Video*,TBD
 *Simulation (Mac)*,TBD
 |======
