--- a/demos/msa-on-demand-env.adoc
+++ b/demos/msa-on-demand-env.adoc
@@ -4,9 +4,9 @@
 |======
 *Length*,5 min
 *Difficulty*,Easy
-*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_15
-*Video*,https://drive.google.com/open?id=0B630TpgzAhO_ZXg2TnF0UnZIX0U
-*Simulation (Mac)*,https://drive.google.com/open?id=0B630TpgzAhO_N190WDBZTnowdVk
+*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_15[Google Slide]
+*Video*,https://drive.google.com/open?id=0B630TpgzAhO_ZXg2TnF0UnZIX0U[Google Drive]
+*Simulation (Mac)*,https://drive.google.com/open?id=0B630TpgzAhO_N190WDBZTnowdVk[Google Drive]
 |======
 
 ### Explain the Demo Concepts
