--- a/demos/msa-overview.adoc
+++ b/demos/msa-overview.adoc
@@ -4,7 +4,7 @@
 |======
 *Length*,TBD
 *Difficulty*,Easy
-*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g19ddf4bec2_2_27
+*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g19ddf4bec2_2_27[Google Slide]
 *Video*,TBD
 *Simulation (Mac)*,TBD
 |======
