--- a/clustering.adoc
+++ b/clustering.adoc
@@ -35,7 +35,7 @@ provided the container has a port named jolokia. On the console, click on
 mlbparks pods, then on any of the two pods deployed. On the *Details* tab, click
 on *Open Java Console*.
 
-image::/images/clustering-details.png[Java Console Link,880,align="center"]
+image::clustering-details.png[Java Console Link,880,align="center"]
 
 In the Java Console, use the *JMX* browser and click on *jgroups &rarr; channel
 &rarr; ee*. The right pane shows the list of clustering JMX attributes including
@@ -44,6 +44,6 @@ of two pods which are currently members of the cluster. When *mlbparks* pod gets
 scaled up or down, JBoss EAP gets notified by calling Kubernetes' REST API and
 updates the cluster status based on the number of pods available.
 
-image::/images/clustering-hawtio.png[Java Console - Clustering,1000,align="center"]
+image::clustering-hawtio.png[Java Console - Clustering,1000,align="center"]
 
 // TODO: add stateful (session, cache, etc) data to the mlbparks backend.
