--- a/scaling.adoc
+++ b/scaling.adoc
@@ -146,7 +146,7 @@ many pods are behind a service.
 
 You can also see that both *Pods* are running using the web console:
 
-image::/images/parksmap-scaled.png[Scaling]
+image::parksmap-scaled.png[Scaling]
 
 Overall, that's how simple it is to scale an application (*Pods* in a
 *Service*). Application scaling can happen extremely quickly because OpenShift
