--- a/demos/msa-agile-integration.adoc
+++ b/demos/msa-agile-integration.adoc
@@ -1,13 +1,13 @@
 ### Agile Integration
 
-[format="csv",cols="2"]
-|======
-*Length*,TBD
-*Difficulty*,Medium
-*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5[Google Slide]
-*Video*,TBD
-*Simulation (Mac)*,TBD
-|======
+[cols="1d,7v", width="80%"]
+|===
+|*Length*|TBD
+|*Difficulty*|Medium
+|*Slides*|TBD
+|*Video*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5[Google Slide]
+|*Simulation*|TBD
+|===
 
 ### Explain the Demo Concepts
 * Explain agile integration using the
