--- a/demos/msa-cicd-eap.adoc
+++ b/demos/msa-cicd-eap.adoc
@@ -1,13 +1,14 @@
 ## Increasing Delivery Speed with CI/CD
 
-[format="csv",cols="2"]
-|======
-*Length*, ~8 min
-*Difficulty*,Medium
-*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_0[Google Slide]
-*Video*,https://drive.google.com/open?id=0B630TpgzAhO_NEVwczJ1WDF2TE0[Google Drive]
-*Simulation (Mac)*,TBD
-|======
+[cols="1d,7v", width="80%"]
+|===
+|*Length*|~8 min
+|*Difficulty*|Medium
+|*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_0[Google Slide]
+|*Video*|https://drive.google.com/open?id=0B630TpgzAhO_NEVwczJ1WDF2TE0[Google Drive]
+|*Simulation*|TBD
+|===
+
 
 ### Explain the Demo Concepts
 
