--- a/demos/msa-on-demand-env.adoc
+++ b/demos/msa-on-demand-env.adoc
@@ -1,13 +1,15 @@
 ## Creating On-Demand Environment
 
-[format="csv",cols="2"]
-|======
-*Length*,5 min
-*Difficulty*,Easy
-*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_15[Google Slide]
-*Video*,https://drive.google.com/open?id=0B630TpgzAhO_ZXg2TnF0UnZIX0U[Google Drive]
-*Simulation (Mac)*,https://drive.google.com/open?id=0B630TpgzAhO_Wjlldk0zTHQ4ZDQ[Google Drive]
-|======
+[cols="1d,7v", width="80%"]
+|===
+|*Length*|~5 min
+|*Difficulty*|Easy
+|*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_15[Google Slide]
+|*Video*|https://drive.google.com/open?id=0B630TpgzAhO_ZXg2TnF0UnZIX0U[Google Drive]
+|*Simulation*|https://drive.google.com/open?id=0B630TpgzAhO_Wjlldk0zTHQ4ZDQ[Mac]
+https://drive.google.com/open?id=0B630TpgzAhO_cklJWm5DX0syVDQ[HTML]
+|===
+
 
 ### Explain the Demo Concepts
 
