--- a/demos/msa-overview.adoc
+++ b/demos/msa-overview.adoc
@@ -1,13 +1,14 @@
 ## Containerized Microservices
 
-[format="csv",cols="2"]
-|======
-*Length*,TBD
-*Difficulty*,Easy
-*Slides*,https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g19ddf4bec2_2_27[Google Slide]
-*Video*,TBD
-*Simulation (Mac)*,TBD
-|======
+[cols="1d,7v", width="80%"]
+|===
+|*Length*|TBD
+|*Difficulty*|Easy
+|*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g19ddf4bec2_2_27[Google Slide]
+|*Video*|TBD
+|*Simulation*|https://drive.google.com/open?id=0B630TpgzAhO_a1d2QTRqQTVqZ2s[Mac]
+https://drive.google.com/open?id=0B630TpgzAhO_d0xrQUFzWHQtaGM[HTML]
+|===
 
 
 ### Explain the Demo Concepts
