--- a/demos/msa-dev-process-code-review.adoc
+++ b/demos/msa-dev-process-code-review.adoc
@@ -4,9 +4,10 @@
 |===
 |*Length*|~5 min
 |*Difficulty*|Easy
-|*Slides*|TBD
+|*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b05a1839c_0_0[Google Slide]
 |*Video*|https://drive.google.com/open?id=0B630TpgzAhO_QXJMUnp2LTFIMGc[Google Drive]
-|*Simulation*|TBD
+|*Simulation*|https://drive.google.com/open?id=0B630TpgzAhO_YUNvV0ViS0g5cXM[Mac]
+https://drive.google.com/open?id=0B630TpgzAhO_dWxrZTlWeXV3Yjg[HTML]
 |===
 
 
