--- a/demos/msa-agile-integration.adoc
+++ b/demos/msa-agile-integration.adoc
@@ -4,8 +4,8 @@
 |===
 |*Length*|TBD
 |*Difficulty*|Medium
-|*Slides*|TBD
-|*Video*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5[Google Slide]
+|*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5[Google Slide]
+|*Video*|https://drive.google.com/open?id=0B630TpgzAhO_N3ZtdUhiblV2Rnc[Google Drive]
 |*Simulation*|TBD
 |===
 
