--- a/demos/msa-overview.adoc
+++ b/demos/msa-overview.adoc
@@ -2,10 +2,10 @@
 
 [cols="1d,7v", width="80%"]
 |===
-|*Length*|TBD
+|*Length*|~5 min
 |*Difficulty*|Easy
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g19ddf4bec2_2_27[Google Slide]
-|*Video*|TBD
+|*Video*|https://drive.google.com/open?id=0B630TpgzAhO_X0NTcmYzYmkzVjQ[Google Drive]
 |*Simulation*|https://drive.google.com/open?id=0B630TpgzAhO_a1d2QTRqQTVqZ2s[Mac]
 https://drive.google.com/open?id=0B630TpgzAhO_d0xrQUFzWHQtaGM[HTML]
 |===
