renamed dev producitvity demo module

--- a/demos/msa-dev-productivity-jbds.adoc
+++ b/demos/msa-dev-productivity-jbds.adoc
@@ -1,4 +1,4 @@
-## Increase Developer Productivity with Container
+## Increase Developer Productivity with Container (with JBoss Developer Studio)
 
 [cols="1d,7v", width="80%"]
 |===
