--- a/databases.adoc
+++ b/databases.adoc
@@ -283,14 +283,14 @@ arbitrary key=value pair. It could be anything.
 * `openshift=awesome`
 
 In the case of the parks map, the application is actually querying the OpenShift
-API and asking about the *Routes* in the project. If any of them have a
+API and asking about the *Routes* and *Services* in the project. If any of them have a
 *Label* that is `type=parksmap-backend`, the application knows to interrogate
-that service's endpoints to look for map data.
+the endpoints to look for map data.
 {% if PARKSMAP_PY %}
-You can see the code that does this link:https://github.com/openshift-roadshow/parksmap-web-py/blob/1.0.0/app.py#L85[here].
+You can see the code that does this link:https://github.com/openshift-roadshow/parksmap-web-py/blob/1.0.0/app.py#L97[here].
 {% else %}
 You can see the code that does this
-link:https://github.com/openshift-roadshow/parksmap-web/blob/{{PARKSMAP_VERSION}}/src/main/java/com/openshift/evg/roadshow/rest/ServiceWatcher.java#L20[here].
+link:https://github.com/openshift-roadshow/parksmap-web/blob/{{PARKSMAP_VERSION}}/src/main/java/com/openshift/evg/roadshow/rest/RouteWatcher.java#L20[here].
 {% endif %}
 
 
