--- a/logging.adoc
+++ b/logging.adoc
@@ -84,17 +84,17 @@ certificate.
 
 Clicking this link takes you to the Kibana web interface. This interface is
 secured with OpenShift's role-based access controls, so you can only see logs
-for projects that you have access to. 
+for projects that you have access to.
 
 image::kibana-parksmap.png[Kibana Interface]
 
 The "View Archive" link that you clicked takes you to a default view with a specific search term
 pre-populated. Kibana will only show you logs where the pod name is
-`parksmap-1-hx0kv` and in the *Project* (namespace) {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}. 
+`parksmap-1-hx0kv` and in the *Project* (namespace) {{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.
 
 [source]
 ----
-kubernetes_pod_name:"parksmap-1-hx0kv" AND kubernetes_namespace_name:"{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}"
+kubernetes.pod_name:"parksmap-1-hx0kv" AND kubernetes.namespace_name:"{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}"
 ----
 
 If you want to see all the historical logs for this *Project*, simply remove the
@@ -102,11 +102,11 @@ pod name reference and click the magnifying glass.
 
 [source,role=copypaste]
 ----
-kubernetes_namespace_name:"{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}"
+kubernetes.namespace_name:"{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}"
 ----
 
 If you click the "x" in the column for the container name, and, in the left bar,
-click "add" for `kubernetes_pod_name`, you'll then see your old *Pod*'s logs,
+click "add" for `kubernetes.pod_name`, you'll then see your old *Pod*'s logs,
 too. Remember, we scaled them down before coming here, so you can see how the
 log system is keeping a historical record.
 
@@ -116,7 +116,7 @@ Try the following search string:
 
 [source,role=copypaste]
 ----
-kubernetes_namespace_name:"{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}" AND message:"Failure executing"
+kubernetes.namespace_name:"{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}" AND message:"Failure executing"
 ----
 
 Service account? What's that?
